--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=انتقال إلى صفحة
 jump-to-page-x=انتقال إلى صفحة {0}
 keyword=كلمة رئيسية
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=ترك النموذج؟
 leave-page=غادر
 manage-templates=عرض الهياكل
@@ -255,6 +254,7 @@ record=سجل
 regular-expression=تعبير عادي
 remove-field=إزالة حقل
 remove-success-page=إزالة صفحة نجاح
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=يتطلب
 require-x=يتطلب {0}
 required-field=حقل مطلوب
