--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Направо към страница (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключова дума (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Оставете формата? (Automatic Translation)
 leave-page=Напускане
 manage-templates=Управление на шаблони
@@ -255,6 +254,7 @@ record=Запис (Automatic Translation)
 regular-expression=Регулярен израз (Automatic Translation)
 remove-field=Премахване на поле (Automatic Translation)
 remove-success-page=Премахване на успех страница (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Изискват (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Задължително поле (Automatic Translation)
