--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Ir a la página
 jump-to-page-x=Ir a la página {0}
 keyword=Palabra clave
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=¿Salir del formulario?
 leave-page=Salir
 manage-templates=Administrar plantillas
@@ -255,6 +254,7 @@ record=Registro
 regular-expression=Expresión regular
 remove-field=Quitar campo
 remove-success-page=Quitar página de confirmación
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Obligatorio
 require-x={0} obligatorio
 required-field=Campo obligatorio
