--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=رفتن به صفحه (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=کلمات کلیدی
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=فرم کند؟ (Automatic Translation)
 leave-page=انصراف از عضویت سایت
 manage-templates=مدیریت قالب ها
@@ -255,6 +254,7 @@ record=رکورد (Automatic Translation)
 regular-expression=عبارت منظم (Automatic Translation)
 remove-field=حذف زمینه (Automatic Translation)
 remove-success-page=حذف صفحه موفقیت (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=ضروری
 require-x=Require {0} (Automatic Copy)
 required-field=زمینه های مورد نیاز (Automatic Translation)
