--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hi_IN.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=पृष्ठ पर जाएँ (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=खोजशब्द (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=प्रपत्र छोड़ दें? (Automatic Translation)
 leave-page=छोडो
 manage-templates=नमूने को मेनेज करना
@@ -255,6 +254,7 @@ record=रिकॉर्ड (Automatic Translation)
 regular-expression=नियमित अभिव्यक्ति (Automatic Translation)
 remove-field=फ़ील्ड निकालें (Automatic Translation)
 remove-success-page=सफलता पेज निकालें (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=की आवश्यकता (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=आवश्यक फ़ील्ड (Automatic Translation)
