--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Langsung ke halaman (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kata kunci (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Meninggalkan bentuk? (Automatic Translation)
 leave-page=Meninggalkan
 manage-templates=Mengelola Template
@@ -255,6 +254,7 @@ record=Catatan (Automatic Translation)
 regular-expression=Ekspresi reguler (Automatic Translation)
 remove-field=Menghapus bidang (Automatic Translation)
 remove-success-page=Menghapus halaman sukses (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Memerlukan (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Harus diisi (Automatic Translation)
