--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Passare alla pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Parola chiave (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Lasciare il modulo? (Automatic Translation)
 leave-page=Esci
 manage-templates=Gestisci Modello
@@ -255,6 +254,7 @@ record=Registrazione (Automatic Translation)
 regular-expression=Espressione regolare (Automatic Translation)
 remove-field=Rimuovere il campo (Automatic Translation)
 remove-success-page=Rimuovere la pagina di successo (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Richiedono (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Campo obbligatorio (Automatic Translation)
