--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=קפוץ לעמוד
 jump-to-page-x=קפוץ לעמוד {0}
 keyword=מילת מפתח (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=לצאת מהטופס?
 leave-page=לעזוב
 manage-templates=נהל תבניות
@@ -255,6 +254,7 @@ record=רשומה (Automatic Translation)
 regular-expression=ביטוי רגולרי
 remove-field=הסר שדה
 remove-success-page=הסר דף הצלחה
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=דרוש
 require-x=דרוש {0}
 required-field=שדה חובה
