--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Przejść do strony (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Słowo kluczowe (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Opuścić formularza? (Automatic Translation)
 leave-page=Wyjdź
 manage-templates=Zarządzaj szablonami
@@ -255,6 +254,7 @@ record=Rekord (Automatic Translation)
 regular-expression=Wyrażenie regularne (Automatic Translation)
 remove-field=Usuń pole (Automatic Translation)
 remove-success-page=Usuń stronę sukcesu (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Wymagają (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Pole wymagane (Automatic Translation)
