--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Pular para a página
 jump-to-page-x=Pular para a página {0}
 keyword=Teclado
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Sair do formulário?
 leave-page=Deixar
 manage-templates=Gerenciar Modelos
@@ -255,6 +254,7 @@ record=Registro
 regular-expression=Expressão regular
 remove-field=Remover campo
 remove-success-page=Remover página de sucesso
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Tornar obrigatório
 require-x=Tornar {0} obrigatório
 required-field=Campo obrigatório
