--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Ir para página (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Palavra-chave (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Embora o formulário? (Automatic Translation)
 leave-page=Deixar
 manage-templates=Gerir Templates
@@ -255,6 +254,7 @@ record=Record (Automatic Copy)
 regular-expression=Expressão regular (Automatic Translation)
 remove-field=Remover campo (Automatic Translation)
 remove-success-page=Remova a página de sucesso (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Exigir (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Campo obrigatório (Automatic Translation)
