--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sr_RS.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sr_RS.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Jump to Page (Automatic Copy)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Keyword (Automatic Copy)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Leave form? (Automatic Copy)
 leave-page=Напусти
 manage-templates=Управљање Шаблонима
@@ -255,6 +254,7 @@ record=Record (Automatic Copy)
 regular-expression=Regular expression (Automatic Copy)
 remove-field=Remove Field (Automatic Copy)
 remove-success-page=Remove Success Page (Automatic Copy)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Require (Automatic Copy)
 require-x=Require {0} (Automatic Copy)
 required-field=Required Field (Automatic Copy)
