--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Hoppa till sida
 jump-to-page-x=Hoppa till sida {0}
 keyword=Nyckelord
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Lämna formulär?
 leave-page=Lämna
 manage-templates=Hantera mallar
@@ -255,6 +254,7 @@ record=Post
 regular-expression=Reguljärt uttryck
 remove-field=Ta bort fältet
 remove-success-page=Ta bort slutförandesida
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Kräv
 require-x=Kräv {0}
 required-field=Obligatoriskt fält
