--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ta_IN.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=பக்கம் தாவி செல்லவும்
 jump-to-page-x=பக்கம் தாவி செல்லவும் {0}
 keyword=கீவேர்டு
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Leave form?
 leave-page=விலகு
 manage-templates=Templates நிர்வகிக்க
@@ -255,6 +254,7 @@ record=Record (Automatic Copy)
 regular-expression=Regular expression
 remove-field=புலம் நீக்கு
 remove-success-page=Success பக்கத்தை அகற்று
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=தேவை
 require-x=தேவை {0}
 required-field=தேவைப்படும் புலம்
