--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_th.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=ไปที่หน้า (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=คำสำคัญ (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=ออกจากแบบฟอร์มหรือไม่ (Automatic Translation)
 leave-page=ปล่อยให้ (Automatic Translation)
 manage-templates=จัดการแม่แบบ (Automatic Translation)
@@ -255,6 +254,7 @@ record=เรก คอร์ด (Automatic Translation)
 regular-expression=นิพจน์ทั่วไป (Automatic Translation)
 remove-field=เอาเขตข้อมูลออก (Automatic Translation)
 remove-success-page=เอาหน้า (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=จำเป็นต้อง (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=ฟิลด์ที่จำเป็น (Automatic Translation)
