--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Перейти до сторінки (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключове слово (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Залишити форми? (Automatic Translation)
 leave-page=Вийти
 manage-templates=Управління шаблонами
@@ -255,6 +254,7 @@ record=Запис (Automatic Translation)
 regular-expression=Регулярний вираз (Automatic Translation)
 remove-field=Видалити поля (Automatic Translation)
 remove-success-page=Видалити сторінку успіху (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Вимагають (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Обов'язкове поле (Automatic Translation)
