--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=跳转到页
 jump-to-page-x=跳转到页{0}
 keyword=关键字
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=离开表单？
 leave-page=离开
 manage-templates=管理模板
@@ -255,6 +254,7 @@ record=记录
 regular-expression=正则表达式
 remove-field=移除字段
 remove-success-page=移除成功页面
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=必填
 require-x=必填 {0}
 required-field=必填字段
