--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Salta a la pàgina
 jump-to-page-x=Salta a la pàgina {0}
 keyword=Paraula clau
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Sortir del formulari?
 leave-page=Abandona
 manage-templates=Gestiona les plantilles
@@ -255,6 +254,7 @@ record=Registre
 regular-expression=Expressió regular
 remove-field=Suprimeix el camp
 remove-success-page=Pàgina d'eliminació correcta
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Requereix
 require-x=Requereix {0}
 required-field=Camp obligatori
