--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Přejít na stránku (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Klíčové slovo (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Opustit formulář? (Automatic Translation)
 leave-page=Opustit
 manage-templates=Spravovat šablony
@@ -255,6 +254,7 @@ record=Záznam (Automatic Translation)
 regular-expression=Regulární výraz (Automatic Translation)
 remove-field=Odstranit pole (Automatic Translation)
 remove-success-page=Odebrat stránku úspěch (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Vyžadovat (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Povinné pole (Automatic Translation)
