--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Gehe zu Seite
 jump-to-page-x=Gehe zu Seite {0}
 keyword=Keyword
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Formular verlassen?
 leave-page=Verlassen
 manage-templates=Vorlagen verwalten
@@ -255,6 +254,7 @@ record=Datensatz
 regular-expression=Regulärer Ausdruck
 remove-field=Feld entfernen
 remove-success-page=Erfolgsseite entfernen
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Erforderlich machen
 require-x={0} erforderlich machen
 required-field=Pflichtfeld
