--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_el.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_el.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Μετάβαση στη σελίδα (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Λέξη-κλειδί (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Αφήστε τη φόρμα; (Automatic Translation)
 leave-page=Αποχώρηση
 manage-templates=Διαχείριση προτύπων
@@ -255,6 +254,7 @@ record=Εγγραφή (Automatic Translation)
 regular-expression=Κανονική έκφραση (Automatic Translation)
 remove-field=Καταργήστε το πεδίο (Automatic Translation)
 remove-success-page=Αφαιρέστε επιτυχία σελίδα (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Απαιτούν (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Απαιτούμενο πεδίο (Automatic Translation)
