--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Leheküljele liikumiseks (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Märksõna (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Jäta vorm? (Automatic Translation)
 leave-page=Lahku
 manage-templates=Mallide haldamine
@@ -255,6 +254,7 @@ record=Kirje (Automatic Translation)
 regular-expression=Regulaarne avaldis (Automatic Translation)
 remove-field=Eemalda väli (Automatic Translation)
 remove-success-page=Eemaldada edu leht (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Nõuda (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Kohustuslik väli (Automatic Translation)
