--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Siirry Sivulle
 jump-to-page-x=Siirry Sivulle {0}
 keyword=Avainsana
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Poistu lomakkeelta?
 leave-page=Poistu
 manage-templates=Hallinnoi esitysmalleja
@@ -255,6 +254,7 @@ record=Tietue
 regular-expression=Säännöllinen lauseke
 remove-field=Poista Kenttä
 remove-success-page=Poista Onnistumissivu
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Vaadittu
 require-x=Vaadittu {0}
 required-field=Vaadittu Kenttä
