--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Aller à la page
 jump-to-page-x=Aller à la page {0}
 keyword=Mot-clé
-last-entry-submitted-x=Dernière entrée envoyée il y a {0}.
 leave-form=Quitter le formulaire ?
 leave-page=Laisser
 manage-templates=Gérer les gabarits
@@ -255,6 +254,7 @@ record=Enregistrement
 regular-expression=Expression régulière
 remove-field=Supprimer le champ
 remove-success-page=Supprimer la page de réussite
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Demander
 require-x=Demander {0}
 required-field=Champ requis
