--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Ugrás az oldalra
 jump-to-page-x=Ugrás a {0} oldalra
 keyword=Kulcsszó
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Elhagyja az űrlapot?
 leave-page=Kilépés
 manage-templates=Sablonok kezelése
@@ -255,6 +254,7 @@ record=Felvétel
 regular-expression=Reguláris kifejezés
 remove-field=Mező eltávolítása
 remove-success-page=Sikeroldal eltávolítása
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Igényel
 require-x={0} szükséges
 required-field=Szükséges mező
