--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=ページへ移動
 jump-to-page-x=ページ{0} へ移動
 keyword=キーワード
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=フォームから移動しますか？
 leave-page=このページを離れる
 manage-templates=テンプレートの管理
@@ -255,6 +254,7 @@ record=レコード
 regular-expression=正規表現
 remove-field=フィールドの削除
 remove-success-page=成功ページを削除します。
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=必須
 require-x=必須 {0}
 required-field=必須項目
