--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=페이지로 이동 (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=키워드 (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=형태를 떠나? (Automatic Translation)
 leave-page=허가
 manage-templates=템플렛을 처리하십시오
@@ -255,6 +254,7 @@ record=레코드 (Automatic Translation)
 regular-expression=정규 표현식 (Automatic Translation)
 remove-field=필드 제거 (Automatic Translation)
 remove-success-page=성공 페이지 제거 (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=필요 (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=필수 필드 (Automatic Translation)
