--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Peršokti į puslapį (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Raktinis žodis (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Palikti formą? (Automatic Translation)
 leave-page=Atostogos (Automatic Translation)
 manage-templates=Tvarkyti ruošinius (Automatic Translation)
@@ -255,6 +254,7 @@ record=Įrašas (Automatic Translation)
 regular-expression=Paprastąją išraišką (Automatic Translation)
 remove-field=Pašalinti lauką (Automatic Translation)
 remove-success-page=Pašalinti sėkmės puslapis (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Reikalauti (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Privalomas laukelis (Automatic Translation)
