--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Hopp til side
 jump-to-page-x=Hopp til side {0}
 keyword=Nøkkelord
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Forlat skjema?
 leave-page=Forlate/la være
 manage-templates=Administrer maler
@@ -255,6 +254,7 @@ record=Posten (Automatic Translation)
 regular-expression=Regulæruttrykk
 remove-field=Fjern felt
 remove-success-page=Fjern suksess side
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Krev
 require-x=Krev {0}
 required-field=Påkrevd felt
