--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON
 jump-to-page=Ga naar pagina
 jump-to-page-x=Ga naar pagina {0}
 keyword=Sleutelwoord
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Formulier afsluiten?
 leave-page=Verlaten
 manage-templates=Sjablonen beheren
@@ -255,6 +254,7 @@ record=Record
 regular-expression=Reguliere expressie
 remove-field=Veld verwijderen
 remove-success-page=Pagina verwijderd
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Vereisen
 require-x={0} vereisen
 required-field=Verplicht veld
