--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sari la pagina (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Cuvinte cheie (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Lasa forma? (Automatic Translation)
 leave-page=Paraseste
 manage-templates=Gestionează Șabloane
@@ -255,6 +254,7 @@ record=Înregistrare (Automatic Translation)
 regular-expression=Expresie regulată (Automatic Translation)
 remove-field=Eliminaţi câmpul (Automatic Translation)
 remove-success-page=Elimina pagina de succes (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Necesită (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Câmp obligatoriu (Automatic Translation)
