--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ru.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Перейти на страницу (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ключевое слово (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Оставьте форму? (Automatic Translation)
 leave-page=Выйти
 manage-templates=Настроить Шаблоны
@@ -255,6 +254,7 @@ record=Записи (Automatic Translation)
 regular-expression=Регулярное выражение (Automatic Translation)
 remove-field=Удалить поле (Automatic Translation)
 remove-success-page=Удалить страницу успеха (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Требуется (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Обязательное поле (Automatic Translation)
