--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Prejsť na stranu (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Kľúčové slovo (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Ponechať formulár? (Automatic Translation)
 leave-page=Opustiť
 manage-templates=Spravovať šablóny
@@ -255,6 +254,7 @@ record=Záznam (Automatic Translation)
 regular-expression=Regulárny výraz (Automatic Translation)
 remove-field=Odstrániť pole (Automatic Translation)
 remove-success-page=Odstránenie stránky úspech (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Vyžadujú (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Povinné pole (Automatic Translation)
