--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Skoči na stran (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Ključne besede (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Pusti obrazec? (Automatic Translation)
 leave-page=Zapusti
 manage-templates=Uredi predloge
@@ -255,6 +254,7 @@ record=Zapis (Automatic Translation)
 regular-expression=Regularni izraz (Automatic Translation)
 remove-field=Odstrani polje (Automatic Translation)
 remove-success-page=Premestitev stran uspeh (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Zahtevajo (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Zahtevano polje (Automatic Translation)
