--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Sayfaya atlamak (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Anahtar kelime (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Formdan çıkın? (Automatic Translation)
 leave-page=Ayrıl/Vazgeç
 manage-templates=Şablonları Yönet
@@ -255,6 +254,7 @@ record=Kayıt (Automatic Translation)
 regular-expression=Normal ifade (Automatic Translation)
 remove-field=Alan kaldırma (Automatic Translation)
 remove-success-page=Başarı sayfasını Kaldır (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Gerektirir (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Gerekli alan (Automatic Translation)
