--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=Chuyển đến trang (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=Từ khóa (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=Để lại hình thức? (Automatic Translation)
 leave-page=Rời khỏi
 manage-templates=Quản lý biểu mẫu
@@ -255,6 +254,7 @@ record=Ghi lại (Automatic Translation)
 regular-expression=Cụm từ thông dụng (Automatic Translation)
 remove-field=Loại bỏ các lĩnh vực (Automatic Translation)
 remove-success-page=Loại bỏ thành công trang (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=Yêu cầu (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=Trường bắt buộc (Automatic Translation)
