--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
@@ -189,7 +189,6 @@ json[stands-for]=JSON (Automatic Copy)
 jump-to-page=跳轉到頁 (Automatic Translation)
 jump-to-page-x=Jump to Page {0} (Automatic Copy)
 keyword=關鍵 字 (Automatic Translation)
-last-entry-submitted-x=Last Entry Submitted {0} (Automatic Copy)
 leave-form=保持表單？ (Automatic Translation)
 leave-page=離開
 manage-templates=管理版型
@@ -255,6 +254,7 @@ record=記錄 (Automatic Translation)
 regular-expression=正則運算式 (Automatic Translation)
 remove-field=刪除欄位 (Automatic Translation)
 remove-success-page=刪除成功頁 (Automatic Translation)
+report-was-updated-x=Report was updated {0}. (Automatic Copy)
 require=要求 (Automatic Translation)
 require-x=Require {0} (Automatic Copy)
 required-field=必要欄位 (Automatic Translation)
