--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_bg.properties
@@ -69,6 +69,7 @@ copy-templates=Форматиране на шаблон
 copy-this-url-to-share-the-form=Копирайте този URL да споделя формуляра. (Automatic Translation)
 copy-url=Копиране на URL адреса (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Създаване на списък (Automatic Translation)
 csv-warning-message=CSV файлът съдържа потребителска входове. Отваряне на CSV файла в програма за електронна таблица може да бъде опасно. (Automatic Translation)
 data-provider-error=Не е възможно да използвате избрания доставчик на данни, защото той не съдържа изходни данни. Отидете на доставчик на данни настройки, за да конфигурирате своя продукция или изберете друг. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Има няма данни за доставчици
 there-are-no-element-sets=Съществуват комплекти няма елемент. Щракнете върху бутона плюс да добавите първия. (Automatic Translation)
 there-are-no-element-sets-yet=Няма никакъв елемент определя все още. (Automatic Translation)
 there-are-no-forms=Не съществуват формуляри. Щракнете върху бутона плюс да добавите първия. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Няма правила все още. Щракнете върху плюс икона по-долу за да добавите първия. (Automatic Translation)
 there-are-no-templates=Няма шаблони. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
