--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ca.properties
@@ -69,6 +69,7 @@ copy-templates=Copia les plantilles
 copy-this-url-to-share-the-form=Copia aquesta URL per compartir el formulari.
 copy-url=Copia la URL
 copy-x=Copia {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Crea una llista
 csv-warning-message=Aquest fitxer CSV conté entrades proporcionades per usuaris. Obrir un fitxer CSV en un programa de fulls de càlcul pot ser perillós.
 data-provider-error=No es pot utilitzar el proveïdor de dades seleccionat perquè no conté una sortida. Aneu a la configuració del Proveïdor de dades per configurar-ne la sortida o seleccionar-ne un altre.
@@ -332,6 +333,7 @@ there-are-no-data-providers=No hi ha proveïdors de dades.
 there-are-no-element-sets=No hi ha cap conjunts d'elements. Feu clic al botó més per afegir el primer.
 there-are-no-element-sets-yet=Encara no hi ha cap conjunt d'elements.
 there-are-no-forms=No hi ha formularis. Feu clic al botó per afegir el primer.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Encara no hi ha regles. Feu clic a la icona més de sota per afegir la primera.
 there-are-no-templates=No hi ha plantilles.
 there-are-no-x=No hi ha cap {0}.
