--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_cs.properties
@@ -69,6 +69,7 @@ copy-templates=Formátovat šablonu
 copy-this-url-to-share-the-form=Zkopírujte tento URL sdílet formulář. (Automatic Translation)
 copy-url=Kopírovat URL (Automatic Translation)
 copy-x=Kopírovat {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Vytvořit seznam (Automatic Translation)
 csv-warning-message=Tento soubor CSV obsahuje uživatelský vstupy. Otevření souboru CSV v tabulkovém procesoru může být nebezpečné. (Automatic Translation)
 data-provider-error=Není možné použít vybrané zprostředkovatele dat, protože neobsahuje žádné výstupní. Přejděte na nastavení zprostředkovatele dat nakonfigurovat svůj výstup nebo vyberte jinou. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Neexistují žádná data zprostředkovatele. (Autom
 there-are-no-element-sets=Neexistují žádné sady prvků. Klepněte na tlačítko plus přidáte ten první. (Automatic Translation)
 there-are-no-element-sets-yet=Zatím nemáme žádný prvek množiny. (Automatic Translation)
 there-are-no-forms=Neexistují žádné formuláře. Klepněte na tlačítko plus přidat ten první. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Dosud neexistují žádná pravidla. Klikněte na ikonu znaménka plus níže přidat první. (Automatic Translation)
 there-are-no-templates=Neexistují žádné šablony. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
