--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_es.properties
@@ -69,6 +69,7 @@ copy-templates=Copiar plantillas
 copy-this-url-to-share-the-form=Copie esta URL para compartir el formulario.
 copy-url=Copiar URL
 copy-x=Copiar {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Crear lista
 csv-warning-message=Este archivo CSV contiene entradas proporcionadas por usuarios. Abrir un archivo CSV en un programa de hoja de cálculo puede ser peligroso.
 data-provider-error=No se puede usar el proveedor de datos seleccionado porque no contiene ningún resultado. Vaya a la configuración del proveedor de datos para configurar los resultados, o bien seleccione otro proveedor de datos.
@@ -332,6 +333,7 @@ there-are-no-data-providers=No hay ningún proveedor de datos.
 there-are-no-element-sets=No hay ningún conjunto de elementos. Haga clic en el botón Más para añadir el primero.
 there-are-no-element-sets-yet=Aún no hay conjuntos de elementos.
 there-are-no-forms=No hay formularios. Haga clic en el botón más para añadir el primero.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Aún no hay ninguna regla. Haga clic en el icono del signo más siguiente para añadir la primera.
 there-are-no-templates=No hay plantillas.
 there-are-no-x=No hay {0}.
