--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fi.properties
@@ -69,6 +69,7 @@ copy-templates=Kopioi esitysmalli
 copy-this-url-to-share-the-form=Kopioi URL-osoite jakaaksesi lomakkeen.
 copy-url=Kopioi URL-osoite
 copy-x=Kopioi {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Luo lista
 csv-warning-message=Tämä CSV-tiedosto sisältää käyttäjän määrittämään tuotosta. CSV-tiedoston avaaminen taulukkolaskentaohjelmaan voi olla vaarallista.
 data-provider-error=Ei ole mahdollista käyttää valittua tietolähdettä, koska se ei sisällä ulostuloa. Siirry tietolähteen asetuksiin määrittääksesi sen lähdön, tai valitaksesi toisen.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Tietolähteitä ei ole.
 there-are-no-element-sets=Elementtisarjoja ei ole. Napsauta plussapainiketta lisätäksesi ensimmäinen.
 there-are-no-element-sets-yet=Elementtijoukkoja ei vielä ole.
 there-are-no-forms=Lomakkeita ei ole. Lisää ensimmäinen napsauttamalla plus-painiketta.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Sääntöjä ei vielä ole. Napsauta alta plus-kuvaketta lisätäksesi ensimmäinen.
 there-are-no-templates=Malleja ei ole.
 there-are-no-x=Ei ole {0}.
