--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fr.properties
@@ -69,6 +69,7 @@ copy-templates=Copier gabarits
 copy-this-url-to-share-the-form=Copier cette URL pour partager le formulaire.
 copy-url=Copier URL
 copy-x=Copier {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Créer une liste
 csv-warning-message=Ce fichier CSV contient des données entrées par un utilisateur. Ouvrir un ficher CSV dans un tableur peut être dangereux.
 data-provider-error=Il est impossible d'utiliser le Fournisseur de données sélectionné parce qu'il ne contient pas de sortie. Allez dans les paramètres du Fournisseur de données pour configurer sa sortie, ou sélectionnez-en un autre.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Il n'y a pas de fournisseur de données.
 there-are-no-element-sets=Il n'y a pas de jeu d'élément. Cliquez sur le bouton Plus pour ajouter le premier.
 there-are-no-element-sets-yet=Il n'y a pas encore de jeux d'éléments.
 there-are-no-forms=Il y a aucun formulaire. Cliquez sur le bouton plus pour ajouter le premier.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Il n'y a aucune règle pour le moment. Cliquez sur l'icône Plus pour ajouter la première.
 there-are-no-templates=Il n'y a pas de modèle.
 there-are-no-x=Il n'y a pas de {0}.
