--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_hu.properties
@@ -69,6 +69,7 @@ copy-templates=Sablonok másolása
 copy-this-url-to-share-the-form=Másold ki ezt ezt az URL-t az űrlap megosztásához.
 copy-url=URL másolása
 copy-x=Másolás: {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Lista létrehozása
 csv-warning-message=Ez a CSV fájl felhasználó által megadott bemenetet tartalmaz. Egy CSV fájl táblázatkezelő programban történő megnyitása veszélyes lehet.
 data-provider-error=A kiválasztott adatszolgáltató nem használható, mert nem tartalmaz kimenetet. Nyissa meg az Adatszolgáltató beállításait, és konfigurálja a kimenetét, vagy válasszon egy másikat.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Nincsenek adatszolgáltatók.
 there-are-no-element-sets=Nincsenek elemcsoportok. Adja meg az elsőt a plusz gombra kattintva.
 there-are-no-element-sets-yet=Még nincsenek elemcsoportok.
 there-are-no-forms=Nincsen űrlap. Kattintson a plusz gombra az első hozzáadásáért.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Még nincsenek szabályok. Adja meg az elsőt az alábbi plusz ikonra kattintva.
 there-are-no-templates=Nincsenek sablonok.
 there-are-no-x=Nincs {0}.
