--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_it.properties
@@ -69,6 +69,7 @@ copy-templates=Copia Modelli
 copy-this-url-to-share-the-form=Copia questo URL per condividere il modulo
 copy-url=Copia URL
 copy-x=Copia {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Crea elenco (Automatic Translation)
 csv-warning-message=Questo file CSV contiene input fornito dall'utente. L'apertura di un file CSV in un foglio di calcolo può essere pericoloso.
 data-provider-error=Non è possibile utilizzare il Provider di dati selezionato perché non contiene un'uscita. Vai alle impostazioni del Provider di dati per configurare l'output o selezionarne un'altra. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Non esistono Nessun provider di dati. (Automatic Tra
 there-are-no-element-sets=Non ci sono nessun insiemi di elementi. Fare clic sul pulsante più per aggiungere quello primo. (Automatic Translation)
 there-are-no-element-sets-yet=Non ci sono nessun set di elemento ancora. (Automatic Translation)
 there-are-no-forms=Non ci sono moduli. Clicca sul pulsante aggiungi per aggiungere il primo.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Non ci sono regole ancora. Fare clic su più icona qui sotto per aggiungere il primo. (Automatic Translation)
 there-are-no-templates=Non ci sono modelli.
 there-are-no-x=Nessun {0}.
