--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_iw.properties
@@ -69,6 +69,7 @@ copy-templates=העתק תבניות
 copy-this-url-to-share-the-form=העתק כתובת זו כדי לשתף את הטופס.
 copy-url=העתק כתובת URL
 copy-x=העתק {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=צור רשימה
 csv-warning-message=קובץ CSV זה מכיל תשומות שסיפק המשתמש. פתיחת קובץ CSV בתכנית גיליון אלקטרוני עלולה להיות מסוכנת.
 data-provider-error=אין אפשרות להשתמש את ספק הנתונים הנבחר כי הוא אינו מכיל פלט. עבור אל הגדרות ספק נתונים כדי לקבוע את תצורת הפלט שלה או בחר עוד אחד. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=אין ספקי נתונים.
 there-are-no-element-sets=אין ערכות אלמנטים. לחץ על כפתור הפלוס להוספת הערכה הראשונה.
 there-are-no-element-sets-yet=עדיין אין ערכות אלמנטים.
 there-are-no-forms=אין טפסים. לחצו על לחצן פלוס כדי להוסיף את הראשון.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=אין כללים עדיין. לחץ על הסמל פלוס שלהלן כדי להוסיף את הראשון.
 there-are-no-templates=אין תבניות.
 there-are-no-x=אין {0}.
