--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_lt.properties
@@ -69,6 +69,7 @@ copy-templates=Nukopijuokite šablonų (Automatic Translation)
 copy-this-url-to-share-the-form=Nukopijuokite šią nuorodą bendrinti formą. (Automatic Translation)
 copy-url=Nukopijuokite URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Sukurti sąrašą (Automatic Translation)
 csv-warning-message=Šis CSV faile yra vartotojo pateiktas žaliavas. Atidarius CSV failą skaičiuoklės programą gali būti pavojinga. (Automatic Translation)
 data-provider-error=Neįmanoma naudoti pasirinktą duomenų teikėją, nes jame nėra išvesties. Pereikite prie duomenų teikėjo parametrai sukonfigūruoti savo produkcijos arba pasirinkite kitą. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Šiuo metu nėra duomenų teikėjų. (Automatic Tran
 there-are-no-element-sets=Šiuo metu elementas rinkiniai. Spustelėkite pliuso mygtuką Pridėti pirmasis. (Automatic Translation)
 there-are-no-element-sets-yet=Nėra jokių elementų rinkinius dar. (Automatic Translation)
 there-are-no-forms=Nėra jokių formų. Spustelėkite mygtuką plius pridėti pirmasis. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Dar nėra jokių taisyklių. Spustelėkite piktogramą žemiau, Norėdami įtraukti pirmą plius. (Automatic Translation)
 there-are-no-templates=Šiuo metu nėra šablonų. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
