--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_PT.properties
@@ -69,6 +69,7 @@ copy-templates=Copiar Templates
 copy-this-url-to-share-the-form=Copie este URL para partilhar o formulário.
 copy-url=Copie o URL
 copy-x=Copiar {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Criar lista (Automatic Translation)
 csv-warning-message=This CSV file contains user supplied inputs. Opening a CSV file in a spreadsheet program may be dangerous. (Automatic Copy)
 data-provider-error=It is not possible to use the selected Data Provider because it does not contain an output. Go to Data Provider settings to configure its output or select another one. (Automatic Copy)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Não há nenhum provedor de dados. (Automatic Transl
 there-are-no-element-sets=Não há nenhum elemento de moda. Clique no botão mais para adicionar primeiro. (Automatic Translation)
 there-are-no-element-sets-yet=Ainda não há nenhum elemento de moda. (Automatic Translation)
 there-are-no-forms=Não há formulários. Clique no "botão mais" para adicionar o primeiro.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Ainda não existem regras. Clique no mais abaixo para adicionar o primeiro ícone. (Automatic Translation)
 there-are-no-templates=Não há nenhum modelo. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
