--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sl.properties
@@ -69,6 +69,7 @@ copy-templates=Oblikuj predlogo
 copy-this-url-to-share-the-form=Copy URL to deliti obliki. (Automatic Translation)
 copy-url=Kopiraj URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Ustvarite seznam (Automatic Translation)
 csv-warning-message=V datoteki CSV uporabniške vložkov. Ko odprete datoteko CSV v program preglednic lahko nevarna. (Automatic Translation)
 data-provider-error=Ni mogoče uporabiti izbranega ponudnika podatkov, ker vsebuje izhodno. Pojdite na nastavitve ponudnika podatkov oblikovati svojo proizvodnjo ali izberite drugo. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Obstaja noben ponudnik podatkov. (Automatic Translat
 there-are-no-element-sets=Tam so ni element množice. Kliknite na gumb plus dodati prvi. (Automatic Translation)
 there-are-no-element-sets-yet=Tam so ni element množice še. (Automatic Translation)
 there-are-no-forms=Obstajajo ne oblike. Kliknite na gumb plus dodati prvi. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Ne obstajajo pravila še. Kliknite na plus ikona spodaj dodati prvi. (Automatic Translation)
 there-are-no-templates=Obstaja nobene predloge. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
