--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sv.properties
@@ -69,6 +69,7 @@ copy-templates=Formatmall
 copy-this-url-to-share-the-form=Kopiera denna URL för att dela formuläret.
 copy-url=Kopiera URL
 copy-x=Kopiera {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Skapa lista
 csv-warning-message=Den här CSV-filen innehåller användardefinierade indata. Det kan vara farligt att öppna en CSV-fil i ett kalkylprogram.
 data-provider-error=Det går inte att använda den valda dataleverantören eftersom den inte har utdata. Gå till inställningarna för dataleverantören för att konfigurera utdata eller välj en annan.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Det finns inga dataproviders.
 there-are-no-element-sets=Det finns inga elementuppsättningar. Klicka på plusknappen för att lägga till den första.
 there-are-no-element-sets-yet=Det finns inga elementuppsättningar ännu.
 there-are-no-forms=Det finns inga formulär. Klicka på plusknappen för att lägga till det första.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Det finns inga regler ännu. Klicka på plusikonen nedan för att lägga till den första.
 there-are-no-templates=Det finns inga mallar.
 there-are-no-x=Det finns inga {0}.
