--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_tr.properties
@@ -69,6 +69,7 @@ copy-templates=Şablonu Formatla
 copy-this-url-to-share-the-form=Formu paylaşmak için bu URL'yi kopyalayın. (Automatic Translation)
 copy-url=Copy URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Liste oluşturma (Automatic Translation)
 csv-warning-message=Bu CSV dosyası Kullanıcı tarafından sağlanan girdileri içerir. Bir CSV dosyası bir elektronik tablo programı açmak tehlikeli olabilir. (Automatic Translation)
 data-provider-error=Bir çıkış içermediğinden seçili veri sağlayıcısı kullanmak mümkün değildir. Onun çıktı yapılandırmak veya bir tane seçmek için veri sağlayıcı ayarları gidin. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Hiçbir veri sağlayıcıları vardır. (Automatic T
 there-are-no-element-sets=Hiçbir öğe kümesi vardır. İlki eklemek için artı düğmesini tıklatın. (Automatic Translation)
 there-are-no-element-sets-yet=Henüz hiçbir öğe kümesi vardır. (Automatic Translation)
 there-are-no-forms=Hiçbir formları vardır. İlki eklemek için artı düğmesini tıklatın. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Henüz kural yoktur. Simgesi ilk eklemek için aşağıdaki tıklayın. (Automatic Translation)
 there-are-no-templates=Şablon yok vardır. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
