--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ar.properties
@@ -69,6 +69,7 @@ copy-templates=قالب الهيئة
 copy-this-url-to-share-the-form=انسخ عنوان URL هذا لمشاركة النموذج.
 copy-url=نسخ URL
 copy-x=نسخ {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=إنشاء قائمة
 csv-warning-message=يحتوي ملف CSV على إدخالات قدمها المستخدم. وقد يؤدي فتح ملف CSV في برنامج جدول بيانات إلى وقوع خطر.
 data-provider-error=لا يمكن استخدام موفر البيانات المحدد لأنه لا يحتوي على إخراج. اذهب إلى إعدادات موفر البيانات لتكوين إخراجه له أو تحديد واحد آخر.
@@ -332,6 +333,7 @@ there-are-no-data-providers=لا يوجد موفرين للبيانات.
 there-are-no-element-sets=لا توجد مجموعات عناصر. انقر فوق زر الإضافة لإضافة الزر الأول.
 there-are-no-element-sets-yet=لا تتوفر أية مجموعات عناصر بعد.
 there-are-no-forms=لا توجد نماذج. انقر فوق زر الإضافة لإضافة الزر الأول.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=لا توجد قواعد حتى الآن. انقر فوق أيقونة "زائد" أداناه لإضافة الأولى.
 there-are-no-templates=لا توجد قوالب.
 there-are-no-x=لا يوجد {0}.
