--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_de.properties
@@ -69,6 +69,7 @@ copy-templates=Vorlage kopieren
 copy-this-url-to-share-the-form=Kopieren Sie diese URL, um das Formular zu teilen.
 copy-url=URL kopieren
 copy-x={0} kopieren
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Liste erstellen
 csv-warning-message=Diese CSV-Datei enthält Benutzereingaben. Das Öffnen einer CSV-Datei in einem Tabellenkalkulationsprogramm kann gefährlich sein.
 data-provider-error=Es ist nicht möglich, den ausgewählten Datenanbieter zu verwenden, da er kein Output enthält. Gehen Sie zu den Datenanbieter-Einstellungen, um den Output zu konfigurieren oder einen anderen auszuwählen.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Es gibt keine Datenanbieter.
 there-are-no-element-sets=Es gibt keine Elementsets. Klicken Sie auf die Schaltfläche mit dem Pluszeichen, um das erste hinzuzufügen.
 there-are-no-element-sets-yet=Es gibt noch keine Element-Sets.
 there-are-no-forms=Keine Formulare verfügbar. Benutzen Sie die Plus-Schaltfläche, um ein Formular hinzuzufügen.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Es gibt noch keine Regeln. Klicken Sie unten auf das Pluszeichen, um die erste hinzuzufügen.
 there-are-no-templates=Es gibt keine Vorlagen.
 there-are-no-x=Es gibt keine {0}.
