--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_et.properties
@@ -69,6 +69,7 @@ copy-templates=Formaadi mall
 copy-this-url-to-share-the-form=Kopeerige selle URL kujul jagama. (Automatic Translation)
 copy-url=Kopeeri URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Loendi loomine (Automatic Translation)
 csv-warning-message=CSV-fail sisaldab kasutaja poolt esitatud sisendeid. Arvutusprogrammi CSV faili avamine võib olla ohtlik. (Automatic Translation)
 data-provider-error=Ei saa valitud andmepakkuja kasutada, sest see ei sisalda võimsusega. Avage andmepakkuja sätted konfigureerida oma toodangut või valida mõne muu. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Ei ole andmete esitajatele. (Automatic Translation)
 there-are-no-element-sets=Ei ole element komplekti. Klõpsake plussmärgiga nuppu lisada esimene. (Automatic Translation)
 there-are-no-element-sets-yet=Seal on veel mingit element komplekti. (Automatic Translation)
 there-are-no-forms=Selleks ei kasutata vorme. Klõpsake pluss nupule, et lisada esimene. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Puuduvad reeglid veel. Klõpsake allpool lisage esimene pluss. (Automatic Translation)
 there-are-no-templates=On mingit mudelit. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
