--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_fa.properties
@@ -69,6 +69,7 @@ copy-templates=ويرايش قالب
 copy-this-url-to-share-the-form=برای اشتراک‌گذاری فرم این URL را کپی کنید.
 copy-url=کپی URL
 copy-x=کپی {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=ایجاد لیست (Automatic Translation)
 csv-warning-message=این فایل CSV شامل کاربر تامین ورودی. باز کردن فایل CSV در یک برنامه صفحه گسترده ممکن است خطرناک باشد. (Automatic Translation)
 data-provider-error=امکان استفاده از ارائه دهنده داده ها انتخاب شده زیرا خروجی را شامل نیست. رفتن به تنظیمات ارائه دهنده اطلاعات به خروجی خود را پیکربندی کنید و یا یکی دیگر را انتخاب کنید. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=ارائه دهندگان داده بدون وجود
 there-are-no-element-sets=هیچ مجموعه عنصر وجود دارد. به علاوه دکمه برای اضافه کردن یکی از اولین کلیک کنید. (Automatic Translation)
 there-are-no-element-sets-yet=هیچ مجموعه عنصر هنوز وجود دارد. (Automatic Translation)
 there-are-no-forms=فرمی وجود ندارد. برای افزودن اولین مورد دکمه به علاوه را کلیک نمایید.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=هیچ قانون هنوز وجود دارد. با کلیک بر روی به علاوه آیکون زیر برای اولین بار اضافه کردن. (Automatic Translation)
 there-are-no-templates=هیچ قالب وجود دارد. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
