--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_in.properties
@@ -69,6 +69,7 @@ copy-templates=Format Template
 copy-this-url-to-share-the-form=Salin URL ini untuk berbagi bentuk. (Automatic Translation)
 copy-url=Salin URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Membuat daftar (Automatic Translation)
 csv-warning-message=File CSV ini berisi input pengguna yang disediakan. Membuka CSV file di spreadsheet program mungkin berbahaya. (Automatic Translation)
 data-provider-error=Hal ini tidak mungkin untuk menggunakan penyedia Data dipilih karena tidak mengandung output. Pergi ke penyedia Data pengaturan untuk mengkonfigurasi outputnya atau pilih salah satu. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Ada penyedia data tidak ada. (Automatic Translation)
 there-are-no-element-sets=Ada set elemen. Klik tombol Tambah untuk menambahkan yang pertama. (Automatic Translation)
 there-are-no-element-sets-yet=Ada set elemen belum. (Automatic Translation)
 there-are-no-forms=Ada tidak ada bentuk. Klik tombol Tambah untuk menambahkan yang pertama. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Ada tidak ada aturan belum. Klik pada ditambah ikon di bawah ini untuk menambahkan pertama. (Automatic Translation)
 there-are-no-templates=Ada tidak ada template. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
