--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ja.properties
@@ -69,6 +69,7 @@ copy-templates=テンプレートをコピーする
 copy-this-url-to-share-the-form=フォームを共有するのに、このURLをコピーしてください。
 copy-url=URLをコピーする
 copy-x={0}をコピー
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=選択項目
 csv-warning-message=このCSVファイルにはユーザーの入力値が含まれています。表計算プログラムでCSVファイルを開くと、危険な可能性があります。
 data-provider-error=選択したデータプロバイダーは出力を持たないため、使用することはできません。データプロバイダー設定に移動して、出力を設定するか、別のデータプロバイダーを選択してください。
@@ -332,6 +333,7 @@ there-are-no-data-providers=データ プロバイダーはありません。
 there-are-no-element-sets=要素セットがありません。プラスボタンをクリックして最初の要素セットを追加してください。
 there-are-no-element-sets-yet=要素セットは未作成です。
 there-are-no-forms=フォームがありません。プラスボタンをクリックして追加してください。
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=ルールがありません。追加するにはプラスアイコンをクリックします。
 there-are-no-templates=テンプレートが見つかりません。
 there-are-no-x={0} が見つかりません。
