--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ko.properties
@@ -69,6 +69,7 @@ copy-templates=체재 템플렛
 copy-this-url-to-share-the-form=양식을 공유 하는이 URL을 복사 합니다. (Automatic Translation)
 copy-url=URL 복사 (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=목록 만들기 (Automatic Translation)
 csv-warning-message=이 CSV 파일에는 사용자가 제공한 입력을 포함 되어 있습니다. 스프레드시트 프로그램에서 CSV 파일을 열면 위험할 수 있습니다. (Automatic Translation)
 data-provider-error=출력 포함 되어 있지 않으므로 선택한 데이터 공급자를 사용 불가능 합니다. 데이터 공급자 설정을 출력을 구성 하거나 하나를 선택로 이동 합니다. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=거기에 없는 데이터 공급자입니다. (Auto
 there-are-no-element-sets=아무 요소 집합을 확인 하 고 있습니다. 첫 번째 추가 하려면 더하기 버튼을 클릭 합니다. (Automatic Translation)
 there-are-no-element-sets-yet=아직 아무 요소 집합을 있다. (Automatic Translation)
 there-are-no-forms=없는 형태가 있다. 첫 번째 추가 하려면 더하기 버튼을 클릭 합니다. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=아직 아무 규칙이 있다. 아래의 첫 번째 추가 하 아이콘 플러스를 클릭 하십시오. (Automatic Translation)
 there-are-no-templates=있다는 서식 파일이 없습니다. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
