--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nb.properties
@@ -69,6 +69,7 @@ copy-templates=Kopier maler
 copy-this-url-to-share-the-form=Kopier denne URL-en for å dele skjemaet.
 copy-url=Kopier URL
 copy-x=Kopier {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Opprett liste
 csv-warning-message=CSV-filen inneholder brukergenererte data. Det kan være farlig å åpne en CSV-fil i et regneark.
 data-provider-error=Det er ikke mulig å bruke den valgte datatilbyderen da den ikke har utdata. Gå til datatilbyderinnstillinger for w konfigurere dens utdata eller velg en annen.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Det finnes ingen datatilbydere.
 there-are-no-element-sets=Det finnes ingen elementsamlinger. Klikk på plussknappen for å legge til den første.
 there-are-no-element-sets-yet=Det finnes ingen elementsamlinger enda.
 there-are-no-forms=Det finnes ingen skjema. Klikk på plussknappen for å legge til den første.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Det finnes ingen regler enda. Klikk på plussikonet nedenfor for å legge til den første.
 there-are-no-templates=Det finnes ingen maler.
 there-are-no-x=Det finnes ingen {0}.
