--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl.properties
@@ -69,6 +69,7 @@ copy-templates=Sjablonen kopiëren
 copy-this-url-to-share-the-form=Kopieer deze URL om het formulier te delen.
 copy-url=Kopieer URL
 copy-x={0} kopiëren
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Lijst aanmaken
 csv-warning-message=Dit CSV-bestand bevat input afkomstig van de gebruiker. Het kan gevaarlijk zijn om CSV-bestand in een werkbladprogramma te openen.
 data-provider-error=Het is niet mogelijk om de geselecteerde dataprovider te gebruiken omdat deze geen uitvoer bevat. Ga naar de instellingen van de dataprovider om de uitvoer te configureren of een andere te selecteren.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Er zijn geen dataproviders.
 there-are-no-element-sets=Er zijn geen elementensets. Klik op de plusknop om de eerste toe te voegen.
 there-are-no-element-sets-yet=Er zijn nog geen elementensets.
 there-are-no-forms=Er zijn geen formulieren. Klik op de plusknop om de eerste toe te voegen.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Er zijn nog geen regels. Klik op het pluspictogram hieronder om de eerste regel toe te voegen.
 there-are-no-templates=Er zijn geen sjablonen.
 there-are-no-x=Er zijn geen {0}.
