--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl_BE.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_nl_BE.properties
@@ -69,6 +69,7 @@ copy-templates=Template formatteren
 copy-this-url-to-share-the-form=Kopieer deze URL om te delen van het formulier. (Automatic Translation)
 copy-url=URL kopiëren (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Create List (Automatic Copy)
 csv-warning-message=This CSV file contains user supplied inputs. Opening a CSV file in a spreadsheet program may be dangerous. (Automatic Copy)
 data-provider-error=It is not possible to use the selected Data Provider because it does not contain an output. Go to Data Provider settings to configure its output or select another one. (Automatic Copy)
@@ -332,6 +333,7 @@ there-are-no-data-providers=There are no data providers. (Automatic Copy)
 there-are-no-element-sets=There are no element sets. Click on the plus button to add the first one. (Automatic Copy)
 there-are-no-element-sets-yet=There are no element sets yet. (Automatic Copy)
 there-are-no-forms=There are no forms. Click on the plus button to add the first one. (Automatic Copy)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=There are no rules yet. Click on plus icon below to add the first. (Automatic Copy)
 there-are-no-templates=There are no templates. (Automatic Copy)
 there-are-no-x=There are no {0}. (Automatic Copy)
