--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pl.properties
@@ -69,6 +69,7 @@ copy-templates=Formatuj szablon
 copy-this-url-to-share-the-form=Kopiować ten URL wobec udział postaci. (Automatic Translation)
 copy-url=Skopiuj adres URL (Automatic Translation)
 copy-x=Skopiuj {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Tworzenie listy (Automatic Translation)
 csv-warning-message=Ten plik CSV zawiera dane wejściowe użytkownika dostarczone. Otwierając plik CSV w programie arkusza kalkulacyjnego może być niebezpieczne. (Automatic Translation)
 data-provider-error=Nie jest możliwe, aby użyć wybranego dostawcy danych, ponieważ nie zawiera on dane wyjściowe. Przejdź do ustawień dostawcy danych, aby skonfigurować dane wyjściowe lub wybrać inny. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Istnieją nie dostawców danych. (Automatic Translat
 there-are-no-element-sets=Istnieją nie zbiory elementów. Kliknij na przycisk plus, aby dodać pierwszy. (Automatic Translation)
 there-are-no-element-sets-yet=Istnieją jeszcze nie zbiory elementów. (Automatic Translation)
 there-are-no-forms=Tam są nie formy. Kliknij na przycisk plus dodac pierwszy. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Nie ma jeszcze żadnych reguł. Kliknij na plus ikonę poniżej, aby dodać pierwszy. (Automatic Translation)
 there-are-no-templates=Istnieją nie szablony. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
