--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_pt_BR.properties
@@ -69,6 +69,7 @@ copy-templates=Copiar Modelos
 copy-this-url-to-share-the-form=Copie esta URL para compartilhar o formulário.
 copy-url=Copiar URL
 copy-x=Copiar {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Criar uma lista
 csv-warning-message=Este arquivo CSV contém entradas fornecidas pelo usuário. Abrir um arquivo CSV em um programa spreadsheet pode ser perigoso.
 data-provider-error=Não foi possível utilizar o Provedor de dados selecionado, porque ele não contém uma saída. Acesse as configurações do Provedor de dados para configurar sua saída ou selecione outro.
@@ -332,6 +333,7 @@ there-are-no-data-providers=Não há provedores de dados.
 there-are-no-element-sets=Não há nenhum conjunto de elementos. Clique no botão para adicionar um novo.
 there-are-no-element-sets-yet=Ainda não houve uma definição de elemento.
 there-are-no-forms=Não existe nenhum formulário cadastrado. Clique no botão para adicionar um novo.
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Ainda não há regras. Clique no ícone de mais abaixo para adicionar a primeira.
 there-are-no-templates=Não há modelos.
 there-are-no-x=Não há {0}.
