--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_ro.properties
@@ -69,6 +69,7 @@ copy-templates=Format Şablon
 copy-this-url-to-share-the-form=Copiaţi acest URL pentru a partaja forma. (Automatic Translation)
 copy-url=Copiaţi URL-ul (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Creaţi lista (Automatic Translation)
 csv-warning-message=Acest fişier CSV conţine intrări furnizate de utilizator. Deschiderea unui fişier CSV într-un program de calcul tabelar pot fi periculoase. (Automatic Translation)
 data-provider-error=Nu este posibil să se utilizeze selectat furnizorul de date, deoarece conţine o ieşire. Du-te la furnizorul de date settings pentru a configura producţia sau selectaţi altul. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Nu există nici o furnizorilor de date. (Automatic T
 there-are-no-element-sets=Nu există nici un element de seturi. Faceţi clic pe butonul plus pentru a Adauga o prima. (Automatic Translation)
 there-are-no-element-sets-yet=Nu există nici un element seturi încă. (Automatic Translation)
 there-are-no-forms=Nu există nici o formulare. Faceţi clic pe butonul plus pentru a Adauga o prima. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Nu există reguli încă. Faceţi clic pe plus icoana de mai jos pentru a adăuga primul. (Automatic Translation)
 there-are-no-templates=Nu există nici un template-uri. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
