--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_sk.properties
@@ -69,6 +69,7 @@ copy-templates=Kopírovať šablóny
 copy-this-url-to-share-the-form=Skopírujte toto URL zdieľať forme. (Automatic Translation)
 copy-url=Skopírujte adresu URL (Automatic Translation)
 copy-x=Kopírovať {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Vytvorenie zoznamu (Automatic Translation)
 csv-warning-message=Tento súbor CSV obsahuje užívateľské dodáva vstupy. Otvorenie súboru CSV do tabuľkového programu môže byť nebezpečné. (Automatic Translation)
 data-provider-error=Nie je možné použiť vybratý poskytovateľ údajov, pretože neobsahuje výstup. Prejdite do ponuky Nastavenia poskytovateľa údajov konfigurovať jeho výstup alebo vybrať iný. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Nie sú žiadni poskytovatelia údajov. (Automatic T
 there-are-no-element-sets=Neexistujú žiadne prvok množiny. Kliknite na tlačidlo plus pridať ten prvý. (Automatic Translation)
 there-are-no-element-sets-yet=Doteraz nie sú žiadne prvok množiny. (Automatic Translation)
 there-are-no-forms=Neexistujú žiadne formuláre. Kliknite na tlačidlo plus pridať ten prvý. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Doteraz nie sú žiadne pravidlá. Kliknite na plus ikonu nižšie pridať prvý. (Automatic Translation)
 there-are-no-templates=Neexistujú žiadne šablóny. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
