--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_uk.properties
@@ -69,6 +69,7 @@ copy-templates=Шаблон форматування
 copy-this-url-to-share-the-form=Скопіюйте цей URL, щоб поділитися формі. (Automatic Translation)
 copy-url=Скопіюйте URL (Automatic Translation)
 copy-x=Copy {0} (Automatic Copy)
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Створення списку (Automatic Translation)
 csv-warning-message=Цей файл CSV містить введене користувачем входи. Відкривши файл CSV в це програма може бути небезпечним. (Automatic Translation)
 data-provider-error=Це не можливо для використання вибраного постачальника даних, оскільки він не містить потужністю. Зверніться до постачальника даних параметри, щоб налаштувати її вивід або введіть інше ім'я користувача. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Там не немає постачальників 
 there-are-no-element-sets=Там не встановлює елемент. Натисніть на кнопку з плюсом для додавання перша. (Automatic Translation)
 there-are-no-element-sets-yet=Там ще не встановлює елемент. (Automatic Translation)
 there-are-no-forms=Там не немає форм. Натисніть на кнопку з плюсом для додавання перша. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Є немає правил ще. Натисніть на плюс іконці нижче, щоб додати перший. (Automatic Translation)
 there-are-no-templates=Там не немає шаблонів. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
