--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_vi.properties
@@ -69,6 +69,7 @@ copy-templates=Sao chép Biểu mẫu
 copy-this-url-to-share-the-form=Sao chép URL này để chia sẻ các hình thức. (Automatic Translation)
 copy-url=Sao chép URL (Automatic Translation)
 copy-x=Sao chép {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=Tạo danh sách (Automatic Translation)
 csv-warning-message=Này tệp CSV có chứa các yếu tố đầu vào của người dùng được cung cấp. Mở một tệp CSV trong một chương trình bảng tính có thể gây nguy hiểm. (Automatic Translation)
 data-provider-error=Nó không phải là có thể sử dụng các nhà cung cấp dữ liệu được lựa chọn bởi vì nó không chứa một lượng. Đi đến cài đặt nhà cung cấp dữ liệu để cấu hình đầu ra của nó hoặc chọn một số khác. (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=Không có không có nhà cung cấp dữ liệu. (
 there-are-no-element-sets=Không có không có bộ nguyên tố. Nhấp vào nút cộng thêm cái đầu tiên. (Automatic Translation)
 there-are-no-element-sets-yet=Không có không có bộ nguyên tố nào được nêu ra. (Automatic Translation)
 there-are-no-forms=Không có hình thức không có. Nhấp vào nút cộng thêm cái đầu tiên. (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=Không có quy tắc nào. Nhấp vào Thêm biểu tượng dưới đây để thêm đầu tiên. (Automatic Translation)
 there-are-no-templates=Không có không có mẫu. (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
