--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_CN.properties
@@ -69,6 +69,7 @@ copy-templates=复制模板
 copy-this-url-to-share-the-form=复制此URL分享表单。
 copy-url=复制URL
 copy-x=复制{0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=创建列表
 csv-warning-message=此 CSV 文件包含用户提供的输入。在电子表格程序中打开 CSV 文件可能会很危险。
 data-provider-error=无法使用选定的数据提供程序，因为它不包含输出。转到数据提供程序设置以配置其输出或选择另一个输出。
@@ -332,6 +333,7 @@ there-are-no-data-providers=没有数据提供者。
 there-are-no-element-sets=没有元素集。点击加号按钮添加第一个。
 there-are-no-element-sets-yet=目前没有元素集。
 there-are-no-forms=此处无表格，单击加号按钮添加第一个。
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=还没有规则。单击下面的加号按钮添加第一个。
 there-are-no-templates=没有模板。
 there-are-no-x=没有{0}。
