--- a/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/dynamic-data-mapping/dynamic-data-mapping-lang/src/main/resources/content/Language_zh_TW.properties
@@ -69,6 +69,7 @@ copy-templates=複製版型
 copy-this-url-to-share-the-form=複製此 URL 來共用表單。 (Automatic Translation)
 copy-url=複製 URL (Automatic Translation)
 copy-x=複製 {0}
+create-and-publish-a-form-to-start-collecting-data=Create and publish a form to start collecting data. (Automatic Copy)
 create-list=創建清單 (Automatic Translation)
 csv-warning-message=此 CSV 檔包含使用者提供的輸入。在試算表程式中打開 CSV 檔可能會很危險。 (Automatic Translation)
 data-provider-error=無法使用選定的資料提供程式, 因為它不包含輸出。轉到資料提供程式設置以配置其輸出或選擇另一個輸出。 (Automatic Translation)
@@ -332,6 +333,7 @@ there-are-no-data-providers=沒有資料提供程式。 (Automatic Translation)
 there-are-no-element-sets=沒有元素集。點擊加號按鈕添加第一個。 (Automatic Translation)
 there-are-no-element-sets-yet=還沒有元素集。 (Automatic Translation)
 there-are-no-forms=沒有形式。按一下加號按鈕添加第一個。 (Automatic Translation)
+there-are-no-forms-yet=There are no forms yet. (Automatic Copy)
 there-are-no-rules-yet-click-on-plus-icon-below-to-add-the-first=目前還沒有規則。按一下加號圖示下面添加第一個。 (Automatic Translation)
 there-are-no-templates=沒有範本。 (Automatic Translation)
 there-are-no-x=There are no {0}. (Automatic Copy)
